# wide-integer

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  codecov.yml  generic_template_uintwide_t.h  run_fuzzing.sh  sonar-project.properties  wide_integer.vcxproj  wide_integer.vcxproj.filters  wide_integer_vs2022.vcxproj  wide_integer_vs2022.vcxproj.filters
.gcov/make/: make_gcov_02_files.gmk  make_gcov_03_flags.gmk
examples/: CMakeLists.txt  example000_numeric_limits.cpp  example000a_builtin_convert.cpp  example001_mul_div.cpp  example001a_div_mod.cpp  example002_shl_shr.cpp  example003_rootk_pow.cpp  example003_sqrt.cpp  example003a_cbrt.cpp  example004_rootk_pow.cpp  example005_gcd.cpp  example005_powm.cpp  example005a_pow_factors_of_p99.cpp  example006_gcd.cpp  example007_miller_rabin_prime.cpp  example007_random_generator.cpp  example007_tbd.cpp  example008_miller_rabin_prime.cpp  example008a_miller_rabin_prime.cpp  example008b_solovay_strassen_prime.cpp  example009_compare_mul_with_boost.cpp  example009_timed_mul.cpp  example009a_timed_mul_4_by_4.cpp  example009b_timed_mul_8_by_8.cpp  example010_uint48_t.cpp  example011_uint24_t.cpp  example012_rsa_crypto.cpp  example012_uint64_t_limb.cpp  example013_ecdsa_sign_verify.cpp  example014_pi_spigot_wide.cpp  example_uintwide_t.h
math/wide_integer/: cpp.hint  (+4 more)
test/: CMakeLists.txt  parallel_for.h  stopwatch.h  test.cpp  test.hpp  test_arithmetic.hpp  test_uintwide_t.h  test_uintwide_t_0000064_binary_ops.cpp  test_uintwide_t_0000128_binary_ops.cpp  test_uintwide_t_0000512_binary_ops.cpp  test_uintwide_t_0008192_binary_ops.cpp  test_uintwide_t_0065536_binary_ops.cpp  test_uintwide_t_boost_backend.cpp  test_uintwide_t_boost_backend_via_test_arithmetic.cpp  test_uintwide_t_edge_cases.cpp  test_uintwide_t_examples.cpp  test_uintwide_t_float_convert.cpp  test_uintwide_t_int_convert.cpp  test_uintwide_t_n_base.cpp  test_uintwide_t_n_base.h  test_uintwide_t_n_binary_ops_base.cpp  test_uintwide_t_n_binary_ops_base.h  test_uintwide_t_n_binary_ops_mul_div_4_by_4_template.h  test_uintwide_t_n_binary_ops_mul_n_by_m_template.h  test_uintwide_t_n_binary_ops_template.h  test_uintwide_t_n_binary_ops_template_signed.h  test_uintwide_t_n_number_theory_funcs_template.h  test_uintwide_t_spot_values.cpp  test_uintwide_t_xtra_from_issue_335.cpp
wide_integer/: generic_template_uintwide_t.h
(+22 files in other folders)
